--- a/src/pom.xml
+++ b/src/pom.xml
@@ -111,23 +111,22 @@
                 <version>5.14.1</version>
                 <scope>test</scope>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>org.powermock</groupId>-->
-<!--                <artifactId>powermock-api-mockito2</artifactId>-->
-<!--                <version>2.0.9</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>org.powermock</groupId>-->
-<!--                <artifactId>powermock-module-junit4</artifactId>-->
-<!--                <version>2.0.9</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
             <version>4.3.1</version> <!-- Use the latest version -->
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>5.6.2</version>
         </dependency>
 
     </dependencies>
