--- a/src/pom.xml
+++ b/src/pom.xml
@@ -128,6 +128,10 @@
             <artifactId>kryo</artifactId>
             <version>5.6.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-terminal</artifactId>
+            <version>3.21.0</version>
+        </dependency>
     </dependencies>
 </project>
