moving to server-client designing

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ configure(subprojects) {
   apply plugin: 'java-library'
   sourceCompatibility = 17
 
+  dependencies {
+    implementation 'com.google.code.gson:gson:2.10.1'
+  }
+
   // From https://lyze.dev/2021/04/29/libGDX-Internal-Assets-List/
   // The article can be helpful when using assets.txt in your project.
   tasks.register('generateAssetList') {
