--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   testCompileOnly("org.projectlombok:lombok:1.18.38")
   testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
   implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
