--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,6 +11,7 @@ dependencies {
   testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
   implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
+  implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
